Refactor delete result future tests to a parameterised test